--- a/網頁/AttackPage/AtackPagePart4.m.css
+++ b/網頁/AttackPage/AtackPagePart4.m.css
@@ -222,9 +222,8 @@
 	z-index: -2;
 	margin-top: -18.5%;
 	margin-left: -310%;
-	width: 309%;
-	padding-bottom: 172.5%;
-
+	width: 100%;
+	height: 100%;
 }
 .SpeciesDiversityContent.open{
 	-webkit-transition: 2s;
@@ -270,7 +269,7 @@
 	margin-left: 4.17%;
 	margin-top: 2.5%;
 	color: #ffffff;
-	font-size: 3rem;
+	font-size: 6rem;
 	border: solid 3px #FFFFFF;
 	border-left: 0px;
 	border-right: 0px;
@@ -286,7 +285,7 @@
 	margin-left: 32.55%;
 	margin-top: 3.13%;
 	color: #E98C24;
-	font-size: 2.2rem;
+	font-size: 4.5rem;
 	font-weight: normal;
 }
 .SDCpart1{
