--- a/網頁/AttackPage/AtackPagePart4.m.css
+++ b/網頁/AttackPage/AtackPagePart4.m.css
@@ -248,8 +248,8 @@
 	z-index: 16;
 	margin-top: 0%;
 	margin-left: -100%;
-	width: 103%;
-	padding-bottom: 56%;
+	width: 100%;
+	height: 100%;
 	background-color: #163C4B;
 	opacity: 1;
 
