--- a/網頁/AttackPage/AtackPagePart4.m.css
+++ b/網頁/AttackPage/AtackPagePart4.m.css
@@ -224,6 +224,7 @@
 	margin-left: -310%;
 	width: 100%;
 	height: 100%;
+	border: 2px red solid;
 }
 .SpeciesDiversityContent.open{
 	-webkit-transition: 2s;
