--- a/網頁/AttackPage/AtackPagePart4.m.css
+++ b/網頁/AttackPage/AtackPagePart4.m.css
@@ -225,6 +225,8 @@
 	width: 100%;
 	height: 100%;
 	border: 2px red solid;
+	display: flex;
+	align-items: center;
 }
 .SpeciesDiversityContent.open{
 	-webkit-transition: 2s;
@@ -267,7 +269,6 @@
 .SDCMain{
 	position: absolute;
 	z-index: 17;
-	margin-left: 4.17%;
 	margin-top: 2.5%;
 	color: #ffffff;
 	font-size: 6rem;
