--- a/網頁/AttackPage/AtackPagePart4.m.css
+++ b/網頁/AttackPage/AtackPagePart4.m.css
@@ -284,19 +284,19 @@
 .SDCSub{
 	position: absolute;
 	z-index: 17;
-	margin-top: 10%;
+	margin-top: 12.5%;
 	color: #E98C24;
-	font-size: 4rem;
+	font-size: 4.5rem;
 	font-weight: normal;
+	line-height: 1.2;
 }
 .SDCpart1{
 	overflow: visible;
 	position: absolute;
 	z-index: 17;
-	margin-top: 8.5%;
-	margin-left: 10.42%;
-	width: 39.06%;
-	padding-bottom: 22.4%;
+	margin-top: 5%;
+	width: 78.12%;
+	padding-bottom: 44.8%;
 	background-color: #0e262f;
 	border-radius: 2.67%;
 	color: #ffffff;
