--- a/網頁/AttackPage/AtackPagePart4.m.css
+++ b/網頁/AttackPage/AtackPagePart4.m.css
@@ -284,9 +284,9 @@
 .SDCSub{
 	position: absolute;
 	z-index: 17;
-	margin-top: 12.5%;
+	margin-top: 13%;
 	color: #E98C24;
-	font-size: 3.5rem;
+	font-size: 3rem;
 	font-weight: normal;
 	line-height: 1.5;
 }
@@ -294,7 +294,7 @@
 	overflow: visible;
 	position: absolute;
 	z-index: 17;
-	margin-top: 25%;
+	margin-top: 27.%;
 	width: 58.59%;
 	padding-bottom: 33.6%;
 	background-color: #0e262f;
