--- a/網頁/AttackPage/AtackPagePart4.m.css
+++ b/網頁/AttackPage/AtackPagePart4.m.css
@@ -294,7 +294,7 @@
 	overflow: visible;
 	position: absolute;
 	z-index: 17;
-	margin-top: 27.%;
+	margin-top: 27.5%;
 	width: 58.59%;
 	padding-bottom: 33.6%;
 	background-color: #0e262f;
