--- a/網頁/AttackPage/AtackPagePart4.m.css
+++ b/網頁/AttackPage/AtackPagePart4.m.css
@@ -337,6 +337,8 @@
     -o-transition: 0.5s;
     transition: 0.5s;
 	margin-top: 27.5%;
+	width: 58.59%;
+	padding-bottom: 33.6%;
 	opacity: 1;	
 }
 
