--- a/網頁/AttackPage/AtackPagePart4.m.css
+++ b/網頁/AttackPage/AtackPagePart4.m.css
@@ -617,7 +617,7 @@
 	margin-top: 0%;
 	margin-left: 0%;
 	width: 100%;
-	padding-bottom: 56%;
+	height: 100%;
 	background-color: #1E3239;
 	opacity: 0.99;
 	display: flex;
