--- a/網頁/AttackPage/AttackPageAll.m.css
+++ b/網頁/AttackPage/AttackPageAll.m.css
@@ -119,6 +119,7 @@ button{
 	font-size: 1.33rem;
 	overflow: hidden;
 	display: block;
+	border: 2px solid red;
 }
 .view5{
 	font-family: Gen Jyuu Gothic ;
