--- a/網頁/AttackPage/AtackPagePart4.m.css
+++ b/網頁/AttackPage/AtackPagePart4.m.css
@@ -212,11 +212,11 @@
 	position: absolute;
 	z-index: -2;
 	margin-top: -18.5%;
-	margin-left: -310%;
+	margin-left: -100%;
 	width: 100%;
 	height: 100%;
 	display: flex;
-	justify-content: center
+	justify-content: center;
 }
 .SpeciesDiversityContent.open{
 	-webkit-transition: 2s;
@@ -233,7 +233,7 @@
     -ms-transition: 2s;
     -o-transition: 2s;
     transition: 0.01s,opacity 1s;
-    margin-left: -310%;
+    margin-left: -100%;
 	opacity: 0;
 }
 .SDCBG{
@@ -715,10 +715,12 @@
 .OceanAcidificationContent{
 	position: absolute;
 	z-index: -2;
-	margin-top: -37.5%;
-	margin-left: -310%;
-	width: 309%;
-	padding-bottom: 172.5%;
+	margin-top: -18.5%;
+	margin-left: -100%;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
 
 }
 .OceanAcidificationContent.open{
@@ -736,7 +738,7 @@
     -ms-transition: 2s;
     -o-transition: 2s;
     transition: 0.01s,opacity 1s;
-    margin-left: -310%;
+    margin-left: -100%;
 	opacity: 0;
 }
 
@@ -745,8 +747,8 @@
 	z-index: 16;
 	margin-top: 0%;
 	margin-left: -100%;
-	width: 103%;
-	padding-bottom: 56%;
+	width: 100%;
+	height: 100%;
 	background-color: #163C4B;
 	opacity: 1;
 
@@ -760,51 +762,51 @@
 	opacity: 0.9;
 	margin-left: 0%;
 }
+
 .OACMain{
 	position: absolute;
 	z-index: 17;
-	margin-left: 4.17%;
-	margin-top: 2.5%;
+	margin-top: 4%;
 	color: #ffffff;
-	font-size: 3rem;
+	font-size: 6rem;
 	border: solid 3px #FFFFFF;
 	border-left: 0px;
 	border-right: 0px;
 	border-radius: 1px;
 	font-weight: normal;
 	line-height: 0;
+
+
 }
 .OACSub{
 	position: absolute;
 	z-index: 17;
-	margin-left: 32.55%;
-	margin-top: 3.13%;
+	margin-top: 14%;
 	color: #E98C24;
-	font-size: 2.2rem;
+	font-size: 3rem;
 	font-weight: normal;
+	line-height: 1.5;
 }
 .OACpart1{
 	overflow: visible;
 	position: absolute;
 	z-index: 17;
-	margin-top: 8.5%;
-	margin-left: 10.42%;
-	width: 39.06%;
-	padding-bottom: 22.4%;
+	margin-top: 22.5%;
+	width: 58.59%;
+	padding-bottom: 33.6%;
 	background-color: #0e262f;
 	border-radius: 2.67%;
 	color: #ffffff;
 	font-size: 1.66rem;
-	background-image: url( "../../Animation/WorldDamage/封面/Formula.png");
+	background-image: url( ../../Animation/WorldDamage/封面/RedForest.png);
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	-webkit-background-size: contain;
 }
-
 .OACpart1:hover{
 	-webkit-filter:brightness(1.2);
-	background-image: url( "../../Animation/WorldDamage/公式.gif");
+	background-image: url(../../Animation/WorldDamage/紅樹林.gif);
 
 }
 
@@ -814,15 +816,16 @@
     -ms-transition: 0.5s;
     -o-transition: 0.5s;
     transition: 0.5s;
-	margin-top: 16%;
+	margin-top: 17.5%;
+	width: 78.04%;
+	padding-bottom: 44.8%;
 	opacity: 1;	
-	background-image: url( "../../Animation/WorldDamage/公式.gif");
+	background-image: url(../../Animation/WorldDamage/紅樹林.gif);
 	-webkit-background-size: contain;
 
 }
 .OACpart1.open:hover{
 	-webkit-filter:brightness(1);
-
 }
 .OACpart1.close{
 	-webkit-transition: 0.5s;
@@ -830,17 +833,18 @@
     -ms-transition: 0.5s;
     -o-transition: 0.5s;
     transition: 0.5s;
-	margin-top: 8.5%;
+	margin-top: 22.5%;
+	width: 58.59%;
+	padding-bottom: 33.6%;
 	opacity: 1;	
 }
 
 .OACpart1Title{
 	position: absolute;
 	z-index: 19;
-	margin-top: 17.5%;
-	margin-left: 10.42%;
-	font-size: 1.66rem;
-	width: 39.06%;
+	margin-top: 35.5%;
+	font-size: 3rem;
+	width: 58.59%;
 	background-color: #1E3239;
 	color: #fff;
 	display: flex;
@@ -852,33 +856,29 @@
     transition: 1s;
 	width: 100%;
 	margin-left: 0%;
-	font-size: 2.35rem;
-	margin-top: 4.5%;
+	font-size: 5rem;
+	margin-top: 5%;
 	color: #E98C24;
 	background-color: transparent;
-
 }
 
 .OACpart1Title.close{
-	width: 39.06%;
+	margin-top: 35.5%;
+	width: 58.59%;
     transition: 1s;
-	margin-top: 17.5%;
-	margin-left: 10.42%;
 	background-color: #1E3239;
 }
-
 .OACpart2{
 	position: absolute;
 	z-index: 17;
-	margin-top: 8.5%;
-	margin-left: 50.89%;
-	width: 39.06%;
-	padding-bottom: 22.4%;
+	margin-top: 60%;
+	width: 58.59%;
+	padding-bottom: 33.6%;
 	background-color: #0e262f;
 	border-radius: 2.67%;
 	color: #ffffff;
 	font-size: 1.66rem;
-	background-image: url("../../Animation/WorldDamage/封面/Surge.png");
+	background-image: url(../../Animation/WorldDamage/封面/GreatReef.png);
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -887,7 +887,7 @@
 }
 .OACpart2:hover{
 	-webkit-filter:brightness(1.2);
-	background-image: url("../../Animation/WorldDamage/湧升流.gif");
+	background-image: url(../../Animation/WorldDamage/大堡礁.gif);
 
 }
 .OACpart2.open{
@@ -896,10 +896,11 @@
     -ms-transition: 1s;
     -o-transition: 1s;
     transition: 1s;
-	margin-top: 16%;
-	margin-left: 10.42%;
+	margin-top: 17.5%;
+	width: 78.04%;
+	padding-bottom: 44.8%;
 	opacity: 1;
-	background-image: url("../../Animation/WorldDamage/湧升流.gif");
+	background-image: url(../../Animation/WorldDamage/大堡礁.gif);
 	-webkit-background-size: contain;
 
 }
@@ -913,17 +914,18 @@
     -ms-transition: 1s;
     -o-transition: 1s;
     transition: 1s;
-	margin-top: 8.5%;
+	margin-top: 60%;
+	width: 58.59%;
+	padding-bottom: 33.6%;
 	opacity: 1;	
 }
 
 .OACpart2Title{
 	position: absolute;
 	z-index: 19;
-	margin-top: 17.5%;
-	margin-left: 50.89%;
-	font-size: 1.66rem;
-	width: 39.06%;
+	margin-top: 73.5%;
+	font-size: 3rem;
+	width: 58.59%;
 	background-color: #1E3239;
 	color: #fff;
 	display: flex;
@@ -934,32 +936,31 @@
     transition: 1s;
 	width: 100%;
 	margin-left: 0%;
-	font-size: 2.35rem;
-	margin-top: 4.5%;
+	font-size: 5rem;
+	margin-top: 5%;
 	color: #E98C24;
 	background-color: transparent;
 }
 
 .OACpart2Title.close{
-	width: 39.06%;
+	margin-top: 73.5%;
+	font-size: 3rem;
+	width: 58.59%;
     transition: 1s;
-	margin-top: 17.5%;
-	margin-left: 50.89%;
 	background-color: #1E3239;
 }
 
 .OACpart3{
 	position: absolute;
 	z-index: 17;
-	margin-top: 32.5%;
-	margin-left: 10.42%;
-	width: 39.06%;
-	padding-bottom: 22.4%;
+	margin-top: 97.5%;
+	width: 58.59%;
+	padding-bottom: 33.6%;
 	background-color: #0e262f;
 	border-radius: 2.67%;
 	color: #ffffff;
 	font-size: 1.66rem;
-	background-image: url("../../Animation/WorldDamage/封面/Ph7-8.png");
+	background-image: url(../../Animation/WorldDamage/封面/Shark.png);
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -967,7 +968,7 @@
 }
 .OACpart3:hover{
 	-webkit-filter:brightness(1.2);
-	background-image: url( "../../Animation/WorldDamage/ph7-8.gif");
+	background-image: url(../../Animation/WorldDamage/鯊魚鮪魚.gif);
 
 }
 .OACpart3.open{
@@ -976,9 +977,12 @@
     -ms-transition: 2s;
     -o-transition: 2s;
     transition: 1s;
-	margin-top: 16%;
+	margin-top: 17.5%;
+	width: 78.04%;
+	padding-bottom: 44.8%;
 	opacity: 1;
-	background-image: url( "../../Animation/WorldDamage/ph7-8.gif");
+	background-image: url(../../Animation/WorldDamage/鯊魚鮪魚.gif);
+	-webkit-background-size: contain;
 
 }
 .OACpart3.open:hover{
@@ -992,17 +996,16 @@
     -ms-transition: 0.5s;
     -o-transition: 0.5s;
     transition: 0.5s;
-	margin-top: 32.5%;
+	margin-top: 97.5%;
 	opacity: 1;	
 }
 
 .OACpart3Title{
 	position: absolute;
 	z-index: 19;
-	margin-top: 41.5%;
-	margin-left: 10.42%;
-	font-size: 1.66rem;
-	width: 39.06%;
+	margin-top: 110.5%;
+	width: 58.59%;
+	font-size: 3rem;
 	background-color: #1E3239;
 	color: #fff;
 	display: flex;
@@ -1013,33 +1016,30 @@
    	transition: 1s;
 	width: 100%;
 	margin-left: 0%;
-	font-size: 2.35rem;
-	margin-top: 4.5%;
+	font-size: 5rem;
+	margin-top: 5%;
 	color: #E98C24;
 	background-color: transparent;
 }
 
 .OACpart3Title.close{
-	width: 39.06%;
 	transition: 1s;
-	margin-top: 41.5%;
-	margin-left: 10.42%;
+	margin-top: 110.5%;
+	width: 58.59%;
 	background-color: #1E3239;
 }
-
 
 .OACpart4{
 	position: absolute;
 	z-index: 17;
-	margin-top: 32.5%;
-	margin-left: 50.89%;
-	width: 39.06%;
-	padding-bottom: 22.4%;
+	margin-top: 135%;
+	width: 58.59%;
+	padding-bottom: 33.6%;
 	background-color: #0e262f;
 	border-radius: 2.67%;
 	color: #ffffff;
 	font-size: 1.66rem;
-	background-image: url("../../Animation/WorldDamage/封面/MapFish.png");
+	background-image: url(../../Animation/WorldDamage/封面/Mountain.png);
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -1047,7 +1047,7 @@
 }
 .OACpart4:hover{
 	-webkit-filter:brightness(1.2);
-	background-image: url("../../Animation/WorldDamage/地圖魚.gif");
+	background-image: url(../../Animation/WorldDamage/高山物種滅絕.gif);
 
 }
 
@@ -1058,9 +1058,12 @@
     -o-transition: 1s;
     transition: 1s;
 	margin-top: 16%;
-	margin-left: 10.42%;
+	width: 78.04%;
+	padding-bottom: 44.8%;
 	opacity: 1;	
-	background-image: url("../../Animation/WorldDamage/地圖魚.gif");
+	background-image: url(../../Animation/WorldDamage/高山物種滅絕.gif);
+	-webkit-background-size: contain;
+
 }
 .OACpart4.open:hover{
 	-webkit-filter:brightness(1);
@@ -1072,17 +1075,18 @@
     -ms-transition: 1s;
     -o-transition: 1s;
     transition: 1s;
-	margin-top: 32.5%;
+	margin-top: 135%;
+	width: 58.59%;
+	padding-bottom: 33.6%;
 	opacity: 1;	
 }
 
 .OACpart4Title{
 	position: absolute;
 	z-index: 19;
-	margin-top: 41.5%;
-	margin-left: 50.89%;
-	font-size: 1.66rem;
-	width: 39.06%;
+	margin-top: 148%;
+	font-size: 3rem;
+	width: 58.59%;
 	background-color: #1E3239;
 	color: #fff;
 	display: flex;
@@ -1093,20 +1097,18 @@
     transition: 1s;
 	width: 100%;
 	margin-left: 0%;
-	font-size: 2.35rem;
-	margin-top: 4.5%;
+	font-size: 5rem;
+	margin-top: 5%;
 	color: #E98C24;
 	background-color: transparent;
 }
 
 .OACpart4Title.close{
-	width: 39.06%;
 	transition: 1s;
-	margin-left: 50.89%;
-	margin-top: 41.5%;
+	margin-top: 148%;
+	width: 58.59%;
 	background-color: #1E3239;
 }
-
 .OACContent{
 	position: absolute;
 	z-index: -1;
@@ -1115,34 +1117,31 @@
 	width: 0%;
 	background-color: transparent;
 	color: transparent;
-	font-size: 2.2rem;
+	font-size: 4.5rem;
 	opacity: 0;
 	display: flex;
-	align-items: center;
-	justify-content: flex-end;
+	align-items: flex-start;
+	justify-content: center;
 }
 .OACContent.open{
 	position: absolute;
 	margin-top: 0%;
 	margin-left: 0%;
 	width: 100%;
-	padding-bottom: 56%;
+	height: 100%;
 	background-color: #1E3239;
-	opacity: 0.95;
-	display: flex;
+	opacity: 0.99;
 	color: #ffffff;
 	
 }
-
 .OACpart1Contenttext{
 	position: absolute;
-	margin-top: 54%;
-	margin-left: 55.21%;
-	width: 44.79%;
+	margin-top: 65%;
+	margin-left: 7.5%;
+	width: 85%;
 	background-color: transparent;
-	font-size: 2.2rem;
 	display: flex;
-	align-items: center;
+	align-items: flex-start;
 	justify-content: flex-start;
 	line-height: 1.8;
 	opacity: 0;
@@ -1154,16 +1153,16 @@
 
 .OACpart2Contenttext{
 	position: absolute;
-	margin-top: 54%;
-	margin-left: 55.21%;
-	width: 44.79%;
+	margin-top: 65%;
+	margin-left: 7.5%;
+	width: 85%;
 	background-color: transparent;
-	font-size: 2.2rem;
 	display: flex;
 	align-items: center;
 	justify-content: flex-start;
 	line-height: 2;
 	opacity: 0;
+	
 }
 .OACpart2Contenttext.open{
 	transition: 1s opacity  0.5s;
@@ -1172,11 +1171,10 @@
 
 .OACpart3Contenttext{
 	position: absolute;
-	margin-top: 54%;
-	margin-left: 55.21%;
-	width: 44.79%;
+	margin-top: 65%;
+	margin-left: 7.5%;
+	width: 85%;
 	background-color: transparent;
-	font-size: 2.2rem;
 	display: flex;
 	align-items: center;
 	justify-content: flex-start;
@@ -1189,11 +1187,10 @@
 
 .OACpart4Contenttext{
 	position: absolute;
-	margin-top: 54%;
-	margin-left: 55.21%;
-	width: 44.79%;
+	margin-top: 65%;
+	margin-left: 7.5%;
+	width: 85%;
 	background-color: transparent;
-	font-size: 2.2rem;
 	display: flex;
 	align-items: center;
 	justify-content: flex-start;
