--- a/網頁/AttackPage/AtackPagePart4.m.css
+++ b/網頁/AttackPage/AtackPagePart4.m.css
@@ -1223,8 +1223,8 @@
 	position: absolute;
 	z-index: -2;
 	margin-top: -56.5%;
-	margin-left: -310%;
-	width: 309%;
+	margin-left: -100%;
+	width: 100%;
 	padding-bottom: 172.5%;
 
 }
@@ -1243,7 +1243,7 @@
     -ms-transition: 2s;
     -o-transition: 2s;
     transition: 0.01s,opacity 1s;
-    margin-left: -310%;
+    margin-left: -100%;
 	opacity: 0;
 }
 .MICBG{
@@ -1251,8 +1251,8 @@
 	z-index: 16;
 	margin-top: 0%;
 	margin-left: -100%;
-	width: 103%;
-	padding-bottom: 56%;
+	width: 100%;
+	height: 100%;
 	background-color: #163C4B;
 	opacity: 1;
 
@@ -1266,42 +1266,43 @@
 	opacity: 0.9;
 	margin-left: 0%;
 }
+
 .MICMain{
 	position: absolute;
 	z-index: 17;
-	margin-left: 4.17%;
-	margin-top: 2.5%;
+	margin-top: 4%;
 	color: #ffffff;
-	font-size: 3rem;
+	font-size: 6rem;
 	border: solid 3px #FFFFFF;
 	border-left: 0px;
 	border-right: 0px;
 	border-radius: 1px;
 	font-weight: normal;
 	line-height: 0;
+
+
 }
 .MICSub{
 	position: absolute;
 	z-index: 17;
-	margin-left: 32.55%;
-	margin-top: 3.13%;
+	margin-top: 14%;
 	color: #E98C24;
-	font-size: 2.2rem;
+	font-size: 3rem;
 	font-weight: normal;
+	line-height: 1.5;
 }
 .MICpart1{
 	overflow: visible;
 	position: absolute;
 	z-index: 17;
-	margin-top: 8.5%;
-	margin-left: 10.42%;
-	width: 39.06%;
-	padding-bottom: 22.4%;
+	margin-top: 22.5%;
+	width: 58.59%;
+	padding-bottom: 33.6%;
 	background-color: #0e262f;
 	border-radius: 2.67%;
 	color: #ffffff;
 	font-size: 1.66rem;
-	background-image: url( "../../Animation/WorldDamage/封面/Iceberg.png");
+	background-image: url( "../../Animation/WorldDamage/封面/Formula.png");
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -1309,7 +1310,7 @@
 }
 .MICpart1:hover{
 	-webkit-filter:brightness(1.2);
-	background-image: url("../../Animation/WorldDamage/冰山融化.gif");
+	background-image: url( "../../Animation/WorldDamage/公式.gif");
 
 }
 
@@ -1319,14 +1320,16 @@
     -ms-transition: 0.5s;
     -o-transition: 0.5s;
     transition: 0.5s;
-	margin-top: 16%;
+	margin-top: 17.5%;
+	width: 78.04%;
+	padding-bottom: 44.8%;
 	opacity: 1;	
-	background-image: url("../../Animation/WorldDamage/冰山融化.gif");
+	background-image: url( "../../Animation/WorldDamage/公式.gif");
+	-webkit-background-size: contain;
 
 }
 .MICpart1.open:hover{
 	-webkit-filter:brightness(1);
-
 }
 .MICpart1.close{
 	-webkit-transition: 0.5s;
@@ -1334,17 +1337,18 @@
     -ms-transition: 0.5s;
     -o-transition: 0.5s;
     transition: 0.5s;
-	margin-top: 8.5%;
+	margin-top: 22.5%;
+	width: 58.59%;
+	padding-bottom: 33.6%;
 	opacity: 1;	
 }
 
 .MICpart1Title{
 	position: absolute;
 	z-index: 19;
-	margin-top: 17.5%;
-	margin-left: 10.42%;
-	font-size: 1.66rem;
-	width: 39.06%;
+	margin-top: 35.5%;
+	font-size: 3rem;
+	width: 58.59%;
 	background-color: #1E3239;
 	color: #fff;
 	display: flex;
@@ -1356,34 +1360,29 @@
     transition: 1s;
 	width: 100%;
 	margin-left: 0%;
-	font-size: 2.35rem;
-	margin-top: 4.5%;
+	font-size: 5rem;
+	margin-top: 5%;
 	color: #E98C24;
 	background-color: transparent;
-
 }
 
 .MICpart1Title.close{
+	margin-top: 35.5%;
+	width: 58.59%;
     transition: 1s;
-	margin-top: 17.5%;
-	margin-left: 10.42%;
-	width: 39.06%;
 	background-color: #1E3239;
 }
-
-
 .MICpart2{
 	position: absolute;
 	z-index: 17;
-	margin-top: 8.5%;
-	margin-left: 50.89%;
-	width: 39.06%;
-	padding-bottom: 22.4%;
+	margin-top: 60%;
+	width: 58.59%;
+	padding-bottom: 33.6%;
 	background-color: #0e262f;
 	border-radius: 2.67%;
 	color: #ffffff;
 	font-size: 1.66rem;
-	background-image: url("../../Animation/WorldDamage/封面/Age.png");
+	background-image: url("../../Animation/WorldDamage/封面/Surge.png");
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -1392,7 +1391,7 @@
 }
 .MICpart2:hover{
 	-webkit-filter:brightness(1.2);
-	background-image: url("../../Animation/WorldDamage/歲數.gif");
+	background-image: url("../../Animation/WorldDamage/湧升流.gif");
 
 }
 .MICpart2.open{
@@ -1401,10 +1400,12 @@
     -ms-transition: 1s;
     -o-transition: 1s;
     transition: 1s;
-	margin-top: 16%;
-	margin-left: 10.42%;
+	margin-top: 17.5%;
+	width: 78.04%;
+	padding-bottom: 44.8%;
 	opacity: 1;
-	background-image: url("../../Animation/WorldDamage/歲數.gif");
+	background-image: url("../../Animation/WorldDamage/湧升流.gif");
+	-webkit-background-size: contain;
 
 }
 .MICpart2.open:hover{
@@ -1417,17 +1418,18 @@
     -ms-transition: 1s;
     -o-transition: 1s;
     transition: 1s;
-	margin-top: 8.5%;
+	margin-top: 60%;
+	width: 58.59%;
+	padding-bottom: 33.6%;
 	opacity: 1;	
 }
 
 .MICpart2Title{
 	position: absolute;
 	z-index: 19;
-	margin-top: 17.5%;
-	margin-left: 50.89%;
-	font-size: 1.66rem;
-	width: 39.06%;
+	margin-top: 73.5%;
+	font-size: 3rem;
+	width: 58.59%;
 	background-color: #1E3239;
 	color: #fff;
 	display: flex;
@@ -1438,32 +1440,31 @@
     transition: 1s;
 	width: 100%;
 	margin-left: 0%;
-	font-size: 2.35rem;
-	margin-top: 4.5%;
+	font-size: 5rem;
+	margin-top: 5%;
 	color: #E98C24;
 	background-color: transparent;
 }
 
 .MICpart2Title.close{
+	margin-top: 73.5%;
+	font-size: 3rem;
+	width: 58.59%;
     transition: 1s;
-	margin-top: 17.5%;
-	margin-left: 50.89%;
-	width: 39.06%;
 	background-color: #1E3239;
 }
 
 .MICpart3{
 	position: absolute;
 	z-index: 17;
-	margin-top: 32.5%;
-	margin-left: 10.42%;
-	width: 39.06%;
-	padding-bottom: 22.4%;
+	margin-top: 97.5%;
+	width: 58.59%;
+	padding-bottom: 33.6%;
 	background-color: #0e262f;
 	border-radius: 2.67%;
 	color: #ffffff;
 	font-size: 1.66rem;
-	background-image: url("../../Animation/WorldDamage/封面/Glacier.png");
+	background-image: url("../../Animation/WorldDamage/封面/Ph7-8.png");
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -1471,8 +1472,7 @@
 }
 .MICpart3:hover{
 	-webkit-filter:brightness(1.2);
-	background-image: url( "../../Animation/WorldDamage/冰河.gif");
-
+	background-image: url( "../../Animation/WorldDamage/ph7-8.gif");
 }
 .MICpart3.open{
 	-webkit-transition: 2s;
@@ -1480,9 +1480,12 @@
     -ms-transition: 2s;
     -o-transition: 2s;
     transition: 1s;
-	margin-top: 16%;
+	margin-top: 17.5%;
+	width: 78.04%;
+	padding-bottom: 44.8%;
 	opacity: 1;
-	background-image: url( "../../Animation/WorldDamage/冰河.gif");
+	background-image: url( "../../Animation/WorldDamage/ph7-8.gif");
+	-webkit-background-size: contain;
 
 }
 .MICpart3.open:hover{
@@ -1496,17 +1499,16 @@
     -ms-transition: 0.5s;
     -o-transition: 0.5s;
     transition: 0.5s;
-	margin-top: 32.5%;
+	margin-top: 97.5%;
 	opacity: 1;	
 }
 
 .MICpart3Title{
 	position: absolute;
 	z-index: 19;
-	margin-top: 41.5%;
-	margin-left: 10.42%;
-	font-size: 1.66rem;
-	width: 39.06%;
+	margin-top: 110.5%;
+	width: 58.59%;
+	font-size: 3rem;
 	background-color: #1E3239;
 	color: #fff;
 	display: flex;
@@ -1517,35 +1519,30 @@
    	transition: 1s;
 	width: 100%;
 	margin-left: 0%;
-	font-size: 2.35rem;
-	margin-top: 4.5%;
+	font-size: 5rem;
+	margin-top: 5%;
 	color: #E98C24;
 	background-color: transparent;
 }
 
 .MICpart3Title.close{
 	transition: 1s;
-	margin-top: 41.5%;
-	margin-left: 10.42%;
-	width: 39.06%;
+	margin-top: 110.5%;
+	width: 58.59%;
 	background-color: #1E3239;
 }
-
-
-
 
 .MICpart4{
 	position: absolute;
 	z-index: 17;
-	margin-top: 32.5%;
-	margin-left: 50.89%;
-	width: 39.06%;
-	padding-bottom: 22.4%;
+	margin-top: 135%;
+	width: 58.59%;
+	padding-bottom: 33.6%;
 	background-color: #0e262f;
 	border-radius: 2.67%;
 	color: #ffffff;
 	font-size: 1.66rem;
-	background-image: url("../../Animation/WorldDamage/封面/FrozenSoil.png");
+	background-image: url("../../Animation/WorldDamage/封面/MapFish.png");
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -1553,8 +1550,7 @@
 }
 .MICpart4:hover{
 	-webkit-filter:brightness(1.2);
-	background-image: url( "../../Animation/WorldDamage/凍土.gif");
-
+	background-image: url("../../Animation/WorldDamage/地圖魚.gif");
 
 }
 
@@ -1565,9 +1561,12 @@
     -o-transition: 1s;
     transition: 1s;
 	margin-top: 16%;
-	margin-left: 10.42%;
+	width: 78.04%;
+	padding-bottom: 44.8%;
 	opacity: 1;	
-	background-image: url( "../../Animation/WorldDamage/凍土.gif");
+	background-image: url("../../Animation/WorldDamage/地圖魚.gif");
+	-webkit-background-size: contain;
+
 }
 .MICpart4.open:hover{
 	-webkit-filter:brightness(1);
@@ -1579,17 +1578,18 @@
     -ms-transition: 1s;
     -o-transition: 1s;
     transition: 1s;
-	margin-top: 32.5%;
+	margin-top: 135%;
+	width: 58.59%;
+	padding-bottom: 33.6%;
 	opacity: 1;	
 }
 
 .MICpart4Title{
 	position: absolute;
 	z-index: 19;
-	margin-top: 41.5%;
-	margin-left: 50.89%;
-	font-size: 1.66rem;
-	width: 39.06%;
+	margin-top: 148%;
+	font-size: 3rem;
+	width: 58.59%;
 	background-color: #1E3239;
 	color: #fff;
 	display: flex;
@@ -1600,21 +1600,18 @@
     transition: 1s;
 	width: 100%;
 	margin-left: 0%;
-	font-size: 2.35rem;
-	margin-top: 4.5%;
+	font-size: 5rem;
+	margin-top: 5%;
 	color: #E98C24;
 	background-color: transparent;
 }
 
 .MICpart4Title.close{
 	transition: 1s;
-	margin-top: 41.5%;
-	margin-left: 50.89%;
-	width: 39.06%;
+	margin-top: 148%;
+	width: 58.59%;
 	background-color: #1E3239;
 }
-
-
 .MICContent{
 	position: absolute;
 	z-index: -1;
@@ -1623,54 +1620,52 @@
 	width: 0%;
 	background-color: transparent;
 	color: transparent;
-	font-size: 2.2rem;
+	font-size: 4.5rem;
 	opacity: 0;
 	display: flex;
-	align-items: center;
-	justify-content: flex-end;
+	align-items: flex-start;
+	justify-content: center;
 }
 .MICContent.open{
 	position: absolute;
 	margin-top: 0%;
 	margin-left: 0%;
 	width: 100%;
-	padding-bottom: 56%;
+	height: 100%;
 	background-color: #1E3239;
-	opacity: 0.95;
-	display: flex;
+	opacity: 0.99;
 	color: #ffffff;
 	
 }
-
 .MICpart1Contenttext{
 	position: absolute;
-	margin-top: 54%;
-	margin-left: 55.21%;
-	width: 44.79%;
+	margin-top: 65%;
+	margin-left: 7.5%;
+	width: 85%;
 	background-color: transparent;
-	font-size: 2.2rem;
 	display: flex;
-	align-items: center;
+	align-items: flex-start;
 	justify-content: flex-start;
-	line-height: 2;
+	line-height: 1.8;
 	opacity: 0;
 }
 .MICpart1Contenttext.open{
 	transition: 1s opacity  0.5s;
 	opacity: 1;
 }
+
 .MICpart2Contenttext{
 	position: absolute;
-	margin-top: 54%;
-	margin-left: 55.21%;
-	width: 44.79%;
+	margin-top: 65%;
+	margin-left: 7.5%;
+	width: 85%;
 	background-color: transparent;
-	font-size: 2rem;
 	display: flex;
 	align-items: center;
 	justify-content: flex-start;
 	line-height: 2;
 	opacity: 0;
+	
 }
 .MICpart2Contenttext.open{
 	transition: 1s opacity  0.5s;
@@ -1679,15 +1674,13 @@
 
 .MICpart3Contenttext{
 	position: absolute;
-	margin-top: 54%;
-	margin-left: 55.21%;
-	width: 44.79%;
+	margin-top: 65%;
+	margin-left: 7.5%;
+	width: 85%;
 	background-color: transparent;
-	font-size: 2rem;
 	display: flex;
 	align-items: center;
 	justify-content: flex-start;
-	line-height: 2;
 	opacity: 0;
 }
 .MICpart3Contenttext.open{
@@ -1697,18 +1690,16 @@
 
 .MICpart4Contenttext{
 	position: absolute;
-	margin-top: 54%;
-	margin-left: 55.21%;
-	width: 44.79%;
+	margin-top: 65%;
+	margin-left: 7.5%;
+	width: 85%;
 	background-color: transparent;
-	font-size: 2.35rem;
 	display: flex;
 	align-items: center;
 	justify-content: flex-start;
 	opacity: 0;
 	 
 }
-
 .MICpart4Contenttext.open{
 	transition: 1s opacity  0.5s;
 	opacity: 1;
