--- a/網頁/AttackPage/AtackPagePart4.m.css
+++ b/網頁/AttackPage/AtackPagePart4.m.css
@@ -1225,7 +1225,9 @@
 	margin-top: -56.75%;
 	margin-left: -100%;
 	width: 100%;
-	padding-bottom: 172.5%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
 
 }
 .MeltingIceContent.open{
